# MagicVision

./: Cargo.toml  README.md
.github/actions/opencv/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: program_flow.md
src/: capture.rs  constants.rs  lib.rs  main.rs  messages.rs  types.rs
src/cache/: atomic_write.rs  card_cache.rs  matching.rs  mod.rs  paths.rs
src/gui/: app.rs  deck_file_formats.rs  draw_cards.rs  mod.rs
src/recognition/: capture.rs  card_detection.rs  image_proc.rs  init.rs  messages.rs  mod.rs
