[package]
name = "magicvision"
version = "0.2.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.7"
crossbeam = "0.8.4"
crossterm = "0.29.0"
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = { version = "0.35.0", features = ["image"] }
fastrand = "2.4.1"
futures = "0.3.32"
governor = "0.10.4"
image = "0.25.10"
image_hasher = { version = "3.1.1", features = ["fast_resize_unstable"] }
opencv = "0.99.0"
rayon = "1.12.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["serde"] }
